--- a/blog.html
+++ b/blog.html
@@ -1224,6 +1224,33 @@
                         <div class="bg-primary py-4 flex flex-col gap-2 px-6">
                             <a
                                 class="text-white text-left text-[28px] leading-9 xl:text-[32px] xl:leading-10  font-semibold"
+                                href="blog-decluttering-dilemmas-discover-peterstells-expert"
+                            >
+                                Decluttering Dilemmas? Discover Peterstell&#x27;s Expert Solutions for a Cleaner Home
+                            </a>
+                            <span class="text-white opacity-70 text-sm font-bold uppercase">Jul 10, 2025</span>
+                        </div>
+                        <div class="py-4 px-6">
+                            <p class="text-sm xl:text-lg xl:leading-6 font-medium  text-left text-gray-700 h-[120px] truncate whitespace-normal">Decluttering your home can feel like an insurmountable task, especially when clutter accumulates over time. Whether driven by emotional attachment, lack of time, or simply not knowing where to start,…</p>
+                            <div class="text-left mt-4 text-secondary">
+                                <a
+                                    class="flex gap-[10px] items-center"
+                                    href="blog-decluttering-dilemmas-discover-peterstells-expert"
+                                >
+                                    <span class="text-secondary text-sm xl:text-base font-bold uppercase">Read full post</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                        <path class="stroke-secondary" d="M12.6663 7.99967H3.33301M12.6663 7.99967L9.99967 10.6663M12.6663 7.99967L9.99967 5.33301" stroke="none" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                
+                    <div class="w-full pb-2 border-2 border-primary bg-white">
+                        <div class="bg-primary py-4 flex flex-col gap-2 px-6">
+                            <a
+                                class="text-white text-left text-[28px] leading-9 xl:text-[32px] xl:leading-10  font-semibold"
                                 href="blog-the-seasonal-declutter-how-peterstell"
                             >
                                 The Seasonal Declutter: How Peterstell Prepares Your Home for Any Weather
