--- a/blog.html
+++ b/blog.html
@@ -1238,6 +1238,33 @@
                         <div class="bg-primary py-4 flex flex-col gap-2 px-6">
                             <a
                                 class="text-white text-left text-[28px] leading-9 xl:text-[32px] xl:leading-10  font-semibold"
+                                href="blog-the-ultimate-guide-to-stress-free"
+                            >
+                                The Ultimate Guide to Stress-Free Relocation with Peterstell Junk &amp; Moving
+                            </a>
+                            <span class="text-white opacity-70 text-sm font-bold uppercase">Sep 16, 2025</span>
+                        </div>
+                        <div class="py-4 px-6">
+                            <p class="text-sm xl:text-lg xl:leading-6 font-medium  text-left text-gray-700 h-[120px] truncate whitespace-normal">Moving can be one of life’s most significant stressors, but with the right plan and a little bit of help, it doesn’t have to be. Whether you’re moving to a new home across town or relocating for your…</p>
+                            <div class="text-left mt-4 text-secondary">
+                                <a
+                                    class="flex gap-[10px] items-center"
+                                    href="blog-the-ultimate-guide-to-stress-free"
+                                >
+                                    <span class="text-secondary text-sm xl:text-base font-bold uppercase">Read full post</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                        <path class="stroke-secondary" d="M12.6663 7.99967H3.33301M12.6663 7.99967L9.99967 10.6663M12.6663 7.99967L9.99967 5.33301" stroke="none" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                
+                    <div class="w-full pb-2 border-2 border-primary bg-white">
+                        <div class="bg-primary py-4 flex flex-col gap-2 px-6">
+                            <a
+                                class="text-white text-left text-[28px] leading-9 xl:text-[32px] xl:leading-10  font-semibold"
                                 href="blog-creating-more-space-peterstells-proven"
                             >
                                 Creating More Space: Peterstell&#x27;s Proven Techniques for Decluttering Efficiency
