--- a/blog-the-ultimate-guide-to-stress-free-6.html
+++ b/blog-the-ultimate-guide-to-stress-free-6.html
@@ -1622,7 +1622,7 @@ Communication is key when it comes to a stress-free move. Make sure to communica
                             </div>
                             
                                 <div class="text-gray-600 flex-1 text-sm font-normal mt-1.5">
-                                    <p>By providing your phone number, you agree to receive text messages (SMS) from Peterstell Junk and Moving Company. You can unsubscribe at anytime by replying STOP. Message and data rates may apply. Message frequency varies. See our <a target="_blank" href="" class="text-sm font-normal underline">Privacy Policy</a> for more details.</p>
+                                    <p>By providing your phone number, you agree to receive text messages (SMS) from Peterstell Junk and Moving Company. You can unsubscribe at anytime by replying STOP. Message and data rates may apply. Message frequency varies. See our <a target="_blank" href="https://tlp-legal.s3.us-east-2.amazonaws.com/Customer+Privacy+Policy+-+09092025.pdf" class="text-sm font-normal underline">Privacy Policy</a> for more details.</p>
                                 </div>
                             
                         </div>
@@ -2212,7 +2212,7 @@ Communication is key when it comes to a stress-free move. Make sure to communica
                     </div>
                     <div class="text-white">
                         ⓒ All Rights Reserved <span class="mx-2"> | </span>
-                        <a target="_blank" href="" class="text-base text-gray-100">Privacy Policy</a>
+                        <a target="_blank" href="https://tlp-legal.s3.us-east-2.amazonaws.com/Customer+Privacy+Policy+-+09092025.pdf" class="text-base text-gray-100">Privacy Policy</a>
                     </div>
                 </div>
             <div class="relative px-6 xl:pr-32 max-w-7xl mx-auto">
